# Brenda_Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.nf  nextflow.config  pyproject.toml
artifacts/: brenda_stats_snapshot.json  crew_demo.txt  dois.txt  ec_class_entity_summary.csv  ec_class_summary.json  oa_pdf_summary.json  sqlite_schema.sql  unpaywall_status.jsonl  unpaywall_summary.json
artifacts/figures/: pubmed_stats_summary.json
config/: agents.yaml  settings.yaml  workflows.yaml
data/: 2.0.0.html  brenda.schema.json  brenda_README_2025_1.txt
docs/: architecture.md  brenda_analysis.md  brenda_strategy.md
notebooks/: README.md
requirements/: base.txt  dev.txt  test.txt
scripts/: build_brenda_db.sh  ec_class_analysis.py  generate_brenda_stats.py  run_chatbot.sh  run_gradio_chatbot.sh  run_workflow.sh  serve_api.sh  setup_env.sh  setup_py311_env.sh
src/: main.py
src/agents/: __init__.py  analyst.py  base.py  orchestrator.py  researcher.py
src/core/: __init__.py  settings.py
src/crew/: __init__.py  workflow.py
src/interfaces/: api.py  chatbot_cli.py  chatbot_gradio.py  chatbot_streamlit.py  schemas.py
src/pipelines/: brenda_analysis.py  brenda_ingestion.py  oa_pdf_downloader.py  pubmed_advanced_analytics.py  pubmed_article_scrape.py  pubmed_link_index.py  pubmed_reference_export.py  pubmed_stats.py  unpaywall_coverage.py
src/services/: __init__.py  brenda_client.py  chatbot.py  pubmed_fetcher.py  response_formatter.py
src/utils/: __init__.py  logger.py
src/workflows/: __init__.py  brenda_enzyme_insight.py
static/ui/: index.html
tests/: test_chatbot.py  test_settings.py
(+1 files in other folders)
